// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS4 HSL Colors 1`] = `
".hsl{
color:red;
border-color:rgba(0,255,255,.2)
}"
`;

exports[`CSS4 HWB Colors 1`] = `
".hwb{
color:rgba(128,255,0,.5)
}"
`;

exports[`Color Function 1`] = `
".yellow{
color:rgba(255,220,0,.9)
}"
`;

exports[`Easing Gradients 1`] = `
".demo{
background:linear-gradient(to bottom,#111 ,rgba(17,17,17,.90909) 12.34%,rgba(17,17,17,.80331) 23.32%,rgba(17,17,17,.6876) 33.19%,rgba(17,17,17,.56694) 42.17%,rgba(17,17,17,.44628) 50.5%,rgba(17,17,17,.33058) 58.42%,rgba(17,17,17,.22479) 66.16%,rgba(17,17,17,.13388) 73.95%,rgba(17,17,17,.06281) 82.03%,rgba(17,17,17,.01653) 90.64%,rgba(17,17,17,0))
}"
`;

exports[`Hex with Alpha 1`] = `
".blue{
color:rgba(17,17,255,.8)
}"
`;

exports[`Improved Color Palette 1`] = `
".red{
color:#ff4136
}"
`;

exports[`RGBA with Hex 1`] = `
".red{
color:rgba(255,17,17,.8)
}"
`;
